--- a/External css/style.css
+++ b/External css/style.css
@@ -1,14 +1,9 @@
-h1{
-    color: blue;
+.heading{
+    color: black;
     text-align: center;
-    font-size: 40px;
+}
 
-}
-p{
-    color: blueviolet;
-    font-size: 70px;
-    line-height: 1.5;
-}
-body{
-    background-color: azure;
+
+*{
+    background-color: blue;
 }
