--- a/External css/style.css
+++ b/External css/style.css
@@ -1,24 +1,4 @@
-.heading{
-    color: black;
-    text-align: center;
-}
-
-
-*{
-    background-color: blue;
-}
-/* product Box styling */
-.product-box {
-    backround-color: white;
-    width:300px;
-    margin: 0 auto;
-    padding: 15px;
-    bordor:2px
-
-}
-.product-box img {
-    width: 100%;
-    height: auto;
-    bordor-radius: 5px;
-
+#box {
+    background-color: aqua;
+    
 }
