--- a/CSS beg to adv/Experiment 8/experiment-8.css
+++ b/CSS beg to adv/Experiment 8/experiment-8.css
@@ -1,45 +1,47 @@
-body{
-    font-family: Georgia, 'Times New Roman', Times, serif;
-    background-color: antiquewhite;
-}
 
 
 
-
-.cotainer{
-    border: 2px solid black;
-    display: flex;
+#sdata{
+    width:1400px;
+    height:400px ;
+    border: 3px solid black;
+    margin-left: 4%;
+    margin-top: 10%;
+     display: flex;
+    flex-direction: row;
     justify-content: center;
-    align-items: center;
-    flex direction: row;
-    gap: 40px;
-    padding: 40px;
-    margin: 20px;
+     box-shadow:0 4px 12px rgba(0,0,0,0.5);
+    
 }
-.card {
-    background-color: white;
-    width: 220px;
+.sinfo{
+    border: 5px solid rgba(4, 42, 234, 0.721);
+    width: 300px;
+    height: 300px;
+    margin-top: 40px;
+    border-radius: 5%;
+    margin-right: 40px;
+    box-shadow:0 4px 12px rgba(0,0,0,0.5) ;
+    
+}
+.para{
+    display: flexbox;
     text-align: center;
-    border-radius: 10px;
-    padding: 20px;
-    box-shadow: 0 4px 8px rgba(red, green, blue, alpha);
-    border: 2px solid blue;
-
+    font-family: Georgia, 'Times New Roman', Times, serif;
+    
 }
-.circle{
+.shortn{
+    border: 1px solid   rgba(4, 42, 234, 0.721);
+    border-radius: 50%;
+    width: 80px;
+    height:70px ;
+    margin-left: 110px;
+    margin-top: 20px;
+    text-align: center;
     background-color: blue;
     color: white;
-    font-weight:bold ;
-    font-size: 20px ;
-    border-radius: 50%;
-    width: 70px;
-    height: 70px;
-    line-height: 70px;
-    margin:0 auto 15px;
-
+    
 }
-h3 {
-    margin: bottom 5px; 
-    font-size: 14px;
-
+.headings{
+    text-align: center;
+    font-family: Georgia, 'Times New Roman', Times, serif;
 }
