--- a/CSS beg to adv/Experiment 9/experiment-9.css
+++ b/CSS beg to adv/Experiment 9/experiment-9.css
@@ -1,10 +1,48 @@
+body{
+    background-color: rgb(218, 218, 218)
+}
 h1{
-    background-color: bisque;
     text-align: center;
 }
 .container{
+    width: 1500px;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    
 
 }
 .items {
-    background-color: bisque;
+    background-color: white;
+    width: 500px;
+    height: 560px;
+    margin-left: 30px;
+    border: 1px solid white;
+    border-radius: 5%;
+    text-align: center;
+
+}
+.heading1{
+color: green;
+    
+    
+    
+}
+button{
+    background-color: blue;
+    width: 100px;
+    height: 50px;
+    text-align: center;
+    border-radius: 10%;
+}
+img{
+    width: 300px;
+}
+
+ 
+    
+
+ 
+#oven{
+    margin-top: 20%;
 }
