--- a/CSS beg to adv/Experiment 9/experiment-9.css
+++ b/CSS beg to adv/Experiment 9/experiment-9.css
@@ -34,9 +34,11 @@ button{
     height: 50px;
     text-align: center;
     border-radius: 10%;
+    
 }
 img{
     width: 300px;
+    margin-top: 10%;
 }
 
  
