--- a/CSS beg to adv/Experiment 10/exp-10.css
+++ b/CSS beg to adv/Experiment 10/exp-10.css
@@ -20,5 +20,21 @@
 }
 .nav-links {
     display: flex;
+    list-style: none;
 
+
+}
+.nav-links li {
+    margin: 0 15px;
+}
+.nav-links a {
+    color: white;
+    text-decoration: none;
+    font-size: 1rem;
+}
+.actions a{
+    margin-left: 15px;
+    color: white;
+    text-decoration: none;
+    font-weight: bold;
 }
