--- a/CSS beg to adv/Experiment 10/exp-10.css
+++ b/CSS beg to adv/Experiment 10/exp-10.css
@@ -38,3 +38,12 @@
     text-decoration: none;
     font-weight: bold;
 }
+/* mobile phone */
+@media (max-width: 768px){
+    .nav-links {
+        display: none;
+    }
+    .actions a{
+        font-size: 0.9rem;
+    }
+}
