--- a/CSS beg to adv/Experiment 10/exp-10.css
+++ b/CSS beg to adv/Experiment 10/exp-10.css
@@ -47,3 +47,15 @@
         font-size: 0.9rem;
     }
 }
+/* tablet */
+@media (min-width: 769px) and (max-width: 1024px) {
+    .nav-links a{
+        font-size: 0,9rem;
+    }
+}
+/* Desktop */
+@media (min width: 1025px) {
+    .nav-links a{
+        font size: 1 rem;
+    }
+}
