--- a/CSS beg to adv/Experiment 10/exp-10.css
+++ b/CSS beg to adv/Experiment 10/exp-10.css
@@ -59,3 +59,9 @@
         font size: 1 rem;
     }
 }
+.saini {
+    background-image: 
+
+
+https://www.google.com/url?sa=i&url=https%3A%2F%2Fwww.shutterstock.com%2Fsearch%2Famazon&psig=AOvVaw0NIiaOfMPa2JyaGbLARTQx&ust=1765199405527000&source=images&cd=vfe&opi=89978449&ved=0CBIQjRxqFwoTCOjet7DGq5EDFQAAAAAdAAAAABAE;
+}
